# babysafe

./: .gitignore  README.md
BabySafeTestClient/: .project  settings.gradle
BabySafeTestClient/app/: build.gradle
BabySafeTestClient/app/src/main/: AndroidManifest.xml
BabySafeTestClient/app/src/main/res/layout/: activity_main.xml  fragment_second.xml
BabySafeTestClient/app/src/main/res/menu/: menu_main.xml
BabySafeTestClient/app/src/main/res/navigation/: nav_graph.xml
BabySafeTestClient/app/src/main/res/values/: strings.xml  themes.xml
BabySafeTestClient/app/src/main/res/values-night/: themes.xml
BabySafeTestClient/gradle/wrapper/: gradle-wrapper.properties
android-testclient/: settings.gradle
android-testclient/app/: build.gradle
android-testclient/app/src/main/: AndroidManifest.xml
android-testclient/app/src/main/res/layout/: activity_main.xml  client_connect.xml  show_video.xml
android-testclient/app/src/main/res/menu/: menu_main.xml
android-testclient/app/src/main/res/navigation/: nav_graph.xml
android-testclient/app/src/main/res/values/: strings.xml  themes.xml
android-testclient/app/src/main/res/values-night/: themes.xml
android-testclient/gradle/wrapper/: gradle-wrapper.properties
image_server/: Cargo.toml
image_server/src/: .main.rs.swp  :w  main.rs
pi-backend/babysafe/: Cargo.toml
pi-backend/babysafe/src/: .main.rs.swp  main.rs  speaker.rs  threadpool.rs  ws.rs
pi-helloWorldToAndroid/HelloWorldToAndroid/: Cargo.toml
pi-helloWorldToAndroid/HelloWorldToAndroid/src/: .main.rs.swp  .ws.rs.swp  main.rs  video.rs  ws.rs
(+10 files in other folders)
