[package]
name = "babysafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.70.0"
tokio = { version="1", features = ["full"] }
tokio-stream = "0.1.6"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.24", default-features=false }
uuid = { version = "1.2.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
warp = "0.3.3"
